fix ant distclean poupdate
Monotone-Parent: d8023440f80ad319ec0ab2a999f90ebd438dcd2f
Monotone-Revision: 434088438cce9cbe916be57e1a46223f23cccf6c

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-07-03T13:39:25
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -73,7 +73,7 @@
         </exec>
     </target>
 
-    <target name="poupdate" depends="compile">
+    <target name="poupdate" depends="builddep, compile">
         <!-- Update the messages_*.po files.  -->
         <exec executable="sh" osfamily="unix" failifexecutionfails="true" >
             <arg value="./bundle-messages.sh" />
