--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
         <ant dir="apps/routerconsole/java/" target="jar" />
         <ant dir="apps/ministreaming/java/" target="jar" />
         <ant dir="apps/streaming/java/" target="jar" />
-        <ant dir="apps/i2ptunnel/java/" target="jar" />
+        <ant dir="apps/i2ptunnel/java/" target="build" />
         <ant dir="apps/addressbook/" target="war" />
     </target>
     <target name="buildrouter">
