--- a/build.xml
+++ b/build.xml
@@ -413,8 +413,11 @@
     </target>
     <target name="prepthemeupdates">
         <!-- Add extricated I2PSnark css here, for now -->
-        <copy file="installer/resources/themes/console/snark.css" todir="pkg-temp/docs/themes/console/" />
-        <!-- these files now in docs/, not in the .war -->
+        <!-- Migrated all Snark content to its own dir. Need to ensure snark dir excluded from console theme choices!! -->
+        <!-- Snark's visible Assets -->
+        <copy todir="pkg-temp/docs/themes/console/snark/" >
+            <fileset  dir="installer/resources/themes/console/snark/" />
+        </copy>
         <!-- No need to copy these individually, we're copying the whole dir below.. 
         <copy file="installer/resources/themes/console/images/favicon.ico" todir="pkg-temp/docs/themes/console/images/" />
         <copy file="installer/resources/themes/console/images/i2plogo.png" todir="pkg-temp/docs/themes/console/images/" />
