update irc description
Monotone-Parent: affb83e1d19640895178c7ac5cc548199a8a79ca
Monotone-Revision: 327afb1a7b2a6d85f4b6762c2e49f72891d65678

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-10-02T15:55:46

--- a/installer/resources/i2ptunnel.config
+++ b/installer/resources/i2ptunnel.config
@@ -25,7 +25,7 @@ tunnel.0.startOnLoad=true
 
 # irc
 tunnel.1.name=IRC Proxy
-tunnel.1.description=IRC proxy to access the anonymous IRC network
+tunnel.1.description=IRC proxy to access anonymous IRC servers
 tunnel.1.type=ircclient
 tunnel.1.sharedClient=false
 tunnel.1.interface=127.0.0.1
