remove unused web-*.xml files from wars
Monotone-Parent: 80ac5f3cd32d8a95a5793f7f0ac3e28b06a82984
Monotone-Revision: e07b7440c8672adc3109f334bd084f0dda07975d

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-10-06T14:25:27

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -113,7 +113,7 @@
     <target name="war" depends="precompilejsp">
         <!-- Don't include the css in the war, the main build.xml will copy it to docs/themes/console/ -->
         <war destfile="build/routerconsole.war" webxml="../jsp/web-out.xml"
-             basedir="../jsp/" excludes="web.xml, *.css, **/*.java, *.jsp, *.jsi, web-fragment.xml">
+             basedir="../jsp/" excludes="web.xml, *.css, **/*.java, *.jsp, *.jsi, web-fragment.xml, web-out.xml">
         </war>
     </target>
     <target name="precompilejsp" unless="precompilejsp.uptodate">
