one more mime type
Monotone-Parent: 2e2819a8215e24003f884662cee43dbb1b829b3b
Monotone-Revision: d9172000e7118a14131e55e96162da7856618dec

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-10-07T15:14:07

--- a/apps/i2psnark/web.xml
+++ b/apps/i2psnark/web.xml
@@ -42,6 +42,11 @@
     </mime-mapping>
 
     <mime-mapping>
+        <extension>mp4</extension>
+        <mime-type>video/mp4</mime-type>
+    </mime-mapping>
+
+    <mime-mapping>
         <extension>rar</extension>
         <mime-type>application/rar</mime-type>
     </mime-mapping>
