* FileUtil: Make it easier to compile without Pack200, or with                 Apache Harmony's Pack200, add unzip to main()
Monotone-Parent: e9715a1b481d8ccc7247daef5e75197b3d2c8f3e
Monotone-Revision: f87ed094dbe87bcd198abf3aa5f01829e61f041a

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-10-24T16:49:20
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,14 @@
     <!--
         <property name="javac.compilerargs" value="-warn:-unchecked,raw,unused,serial" />
     -->
+    <!-- Add Apache Harmony's Pack200 library if you don't have java.util.jar.Pack200
+         See core/java/src/net/i2p/util/FileUtil.java for code changes required
+         to use this library instead of Sun's version.
+         Or to comment it all out if you don't have either.
+    -->
+    <!--
+        <property name="javac.classpath" value="/PATH/TO/pack200.jar" />
+    -->
 
     <!-- You probably don't want to change anything from here down -->
     <target name="help" depends="all" />
