Fix dependencies for Ubuntu
Monotone-Parent: 235ed0749df86b14e3db6c900996ec64dba850d7
Monotone-Revision: 2b0adeb721c602e986e3428c3186872b2429c2eb

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-10-31T19:41:55
Monotone-Branch: i2p.i2p

--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Package: i2p
 Architecture: all
 Section: net
 Priority: optional
-Depends: java-runtime
-Description: load-balanced unspoofable packet switching network
+Depends: sun-java6-jre | default-jre | java-runtime
+Description: Load-balanced unspoofable packet switching network
  I2P is an anonymizing network, offering a simple layer that identity-sensitive
  applications can use to securely communicate. All data is wrapped with several
  layers of encryption, and the network is both distributed and dynamic, with no
