Add get-orig-source rule as required by Ubuntu, see https://wiki.ubuntu.com/UbuntuDevelopment/CodeReviews#NewPackage
Monotone-Parent: 9a8fca24502aa8933793f2bad48e327596a2c0d4
Monotone-Revision: 5784df5facdf6e194dc3c052b2527a8c63c96c0f

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-10-31T21:13:53
Monotone-Branch: i2p.i2p

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+VERSION=`grep String\ VERSION core/java/src/net/i2p/CoreVersion.java | cut -d\" -f2`
+SOURCEURL=http://mirror.i2p2.de/i2psource_${VERSION}.tar.bz2
+
 build:
 	ant preppkg-linux-only
 	mkdir -p debian/tmp/usr/lib
@@ -32,3 +35,6 @@ clean:
 	rm -rf debian/tmp/
 	ant distclean
 	@exit 0
+
+get-orig-source:
+	wget ${SOURCEURL}
