Auto download jetty in the debian and debian-source targets
Monotone-Parent: 8b11d78edf1dc9374803a2ade25fc6bf96b08b9d
Monotone-Revision: 8ffd2848e9d439691cc6cbb258c79922ae10f083

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-06T05:38:00
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -905,7 +905,7 @@
         </exec>
         <echo message="====================" />
         <!-- bundle the 20MB jetty 5 lib since there probably isn't a deb for it -->
-        <ant dir="apps/jetty" target="verifyJettylib" />
+        <ant dir="apps/jetty" target="ensureJettylib" />
         <exec executable="dpkg-buildpackage" failifexecutionfails="true">
             <arg value="-I_MTN" />
         </exec>
@@ -924,7 +924,7 @@
     </target>
     <target name="debian-source">
         <!-- bundle the 20MB jetty 5 lib since there probably isn't a deb for it -->
-        <ant dir="apps/jetty" target="verifyJettylib" />
+        <ant dir="apps/jetty" target="ensureJettylib" />
         <echo message="Did you update the version in these files?" />
         <exec executable="ls" failonerror="true">
             <arg value="-l" />
