Add changelog to .deb
Monotone-Parent: a6decc0ce8ef5e2f0cb28aeb7b9802cee46aef6c
Monotone-Revision: 836802dc61bc00edd8d176598dae4bb92d95fe1e

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-09T21:34:44
Monotone-Branch: i2p.i2p

--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ build:
 	rm debian/tmp/usr/lib/i2p/a
 	touch debian/build
 	mkdir -p debian/tmp/usr/share/doc/i2p
+
 	# Create the Debian copyright file, move the licenses dir,
 	# and delete all license files that are already in /usr/share/common-licenses/
 	cat debian/copyright.part1 LICENSE.txt > debian/tmp/usr/share/doc/i2p/copyright
@@ -32,6 +33,10 @@ build:
 	rm debian/tmp/usr/share/doc/i2p/licenses/LICENSE-Apache2.0.txt
 	rm debian/tmp/usr/share/doc/i2p/licenses/LICENSE-GPLv2.txt
 	rm debian/tmp/usr/share/doc/i2p/licenses/LICENSE-LGPLv2.1.txt
+
+	# changelog
+	gzip -9c history.txt > debian/tmp/usr/share/doc/i2p/changelog.gz
+	gzip -9c debian/changelog > debian/tmp/usr/share/doc/i2p/changelog.Debian.gz
 
 binary: build
 	mkdir -p debian/tmp/DEBIAN
