Fail if repository cannot be created
Monotone-Parent: 836802dc61bc00edd8d176598dae4bb92d95fe1e
Monotone-Revision: a90a0715f156a732cf039bd2df9bbc3d90e82693

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-09T22:19:32
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -962,7 +962,7 @@
         </exec>
     </target>
     <target name="debianrepo" depends="debian">
-        <exec dir="debian" executable="./makerepo.sh" />
+        <exec dir="debian" executable="./makerepo.sh" failonerror="true"/>
     </target>
 
 <!-- the following are appened to help build barebone portable version, 
