* Fix build dependencies for Debian * Add dependency on libc6 which fixes the lintian warning missing-dependency-on-libc
Monotone-Parent: 9ef5f8dbdf741e0d3f6f88061efff16e14d9182a
Monotone-Revision: ca29fd016d218f636d2cc844d46d6a25ca9ff5c6

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-10T21:01:52
Monotone-Branch: i2p.i2p

--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,13 @@ Maintainer: i2p
 Section: net
 Priority: optional
 Homepage: http://www.i2p2.de/
-Build-Depends: java-sdk, ant, gettext
+Build-Depends: sun-java6-jdk | openjdk-6-jdk | default-jdk | java-sdk, ant, fakeroot, gettext
 
 Package: i2p
 Architecture: all
 Section: net
 Priority: optional
-Depends: sun-java6-jre | default-jre | java-runtime
+Depends: libc6, sun-java6-jre | default-jre | java-runtime
 Description: Load-balanced unspoofable packet switching network
  I2P is an anonymizing network, offering a simple layer that identity-sensitive
  applications can use to securely communicate. All data is wrapped with several
