Make separate i386 and amd64 packages, this fixes the arch-independent-package-contains-binary-or-object lintian error
Monotone-Parent: 2b8838a0f68444e41850b58cf41a22a48126f328
Monotone-Revision: 8cf17ec98210769dc292c4e1d6b9ab4a5e968332

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-12T04:04:27
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -933,6 +933,21 @@
         <ant dir="apps/jetty" target="ensureJettylib" />
         <exec executable="dpkg-buildpackage" failifexecutionfails="true">
             <arg value="-I_MTN" />
+            <arg value="-ai386" />
+        </exec>
+        <!-- rather than doing a complete new build, recreate debian/tmp by calling the "build" target in debian/rules -->
+        <delete dir="debian/tmp" />
+        <exec executable="dpkg-buildpackage" failifexecutionfails="true">
+            <arg value="-I_MTN" />
+            <arg value="-Tbuild" />
+            <arg value="-aamd64" />
+            <env key="MAKEFLAGS" value="-B" />
+        </exec>
+        <exec executable="dpkg-buildpackage" failifexecutionfails="true">
+            <arg value="-I_MTN" />
+            <!-- don't clean so the previous package isn't deleted -->
+            <arg value="-nc" />
+            <arg value="-aamd64" />
         </exec>
     </target>
     <target name="debian-binary">
