--- a/debian/rules
+++ b/debian/rules
@@ -3,30 +3,50 @@
 VERSION=`grep String\ VERSION core/java/src/net/i2p/CoreVersion.java | cut -d\" -f2`
 SOURCEURL=http://mirror.i2p2.de/i2psource_${VERSION}.tar.bz2
 
+DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
+ifeq ($(DEB_HOST_ARCH),i386)
+wrapperpath = installer/lib/wrapper/linux
+else ifeq ($(DEB_HOST_ARCH),amd64)
+wrapperpath = installer/lib/wrapper/linux64
+# other architectures could be supported by using runplain.sh
+endif
+
 build:
+	echo Target Architecture is $(DEB_HOST_ARCH)
+ifndef wrapperpath
+	@echo "Architecture not supported: $(DEB_HOST_ARCH)"
+	exit 1
+endif
 	ant preppkg-linux-only
 	mkdir -p debian/tmp/usr/lib
 	mkdir -p debian/tmp/etc/init.d
 	cp -a debian/scripts/init debian/tmp/etc/init.d/i2p
 	cp -a pkg-temp debian/tmp/usr/lib/i2p
-	chmod +x debian/tmp/usr/lib/i2p/postinstall.sh
 	sed 's|$$INSTALL_PATH|/usr/lib/i2p|g' debian/tmp/usr/lib/i2p/wrapper.config > debian/tmp/usr/lib/i2p/a
 	sed 's|$$SYSTEM_java_io_tmpdir|/tmp|g' debian/tmp/usr/lib/i2p/a > debian/tmp/usr/lib/i2p/wrapper.config
 	mkdir -p debian/tmp/usr/bin
 	sed 's|%INSTALL_PATH|/usr/lib/i2p|g' debian/tmp/usr/lib/i2p/eepget > debian/tmp/usr/lib/i2p/a
 	mv debian/tmp/usr/lib/i2p/a debian/tmp/usr/lib/i2p/eepget
 	ln -s /usr/lib/i2p/eepget debian/tmp/usr/bin/eepget
+	chmod +x debian/tmp/usr/lib/i2p/eepget
 	sed 's|%INSTALL_PATH|/usr/lib/i2p|g' debian/tmp/usr/lib/i2p/runplain.sh > debian/tmp/usr/lib/i2p/a
 	sed 's|%SYSTEM_java_io_tmpdir|/tmp|g' debian/tmp/usr/lib/i2p/a > debian/tmp/usr/lib/i2p/runplain.sh
 	sed 's|%INSTALL_PATH|/usr/lib/i2p|g' debian/tmp/usr/lib/i2p/i2prouter > debian/tmp/usr/lib/i2p/a
 	sed 's|%SYSTEM_java_io_tmpdir|/tmp|g' debian/tmp/usr/lib/i2p/a > debian/tmp/usr/lib/i2p/i2prouter
 	ln -s /usr/lib/i2p/i2prouter debian/tmp/usr/bin/i2prouter
+	chmod +x debian/tmp/usr/lib/i2p/i2prouter
 	rm debian/tmp/usr/lib/i2p/a
 	touch debian/build
 	mkdir -p debian/tmp/usr/share/doc/i2p
+	
+	@# copy wrapper files
+	cp ${wrapperpath}/libwrapper.so debian/tmp/usr/lib/i2p/lib/
+	cp ${wrapperpath}/wrapper.jar debian/tmp/usr/lib/i2p/lib/
+	cp ${wrapperpath}/i2psvc debian/tmp/usr/lib/i2p/
+	chmod +x debian/tmp/usr/lib/i2p/i2psvc
 
-	# Create the Debian copyright file, move the licenses dir,
-	# and delete all license files that are already in /usr/share/common-licenses/
+	@# Create the Debian copyright file, move the licenses dir,
+	@# and delete all license files that are already in /usr/share/common-licenses/
 	cat debian/copyright.part1 LICENSE.txt > debian/tmp/usr/share/doc/i2p/copyright
 	mv debian/tmp/usr/lib/i2p/licenses debian/tmp/usr/share/doc/i2p
 	rm debian/tmp/usr/lib/i2p/LICENSE.txt
@@ -34,7 +54,7 @@ build:
 	rm debian/tmp/usr/share/doc/i2p/licenses/LICENSE-GPLv2.txt
 	rm debian/tmp/usr/share/doc/i2p/licenses/LICENSE-LGPLv2.1.txt
 
-	# changelog
+	@# changelog
 	gzip -9c history.txt > debian/tmp/usr/share/doc/i2p/changelog.gz
 	gzip -9c debian/changelog > debian/tmp/usr/share/doc/i2p/changelog.Debian.gz
 
