Put a name and email in the Maintainer field
Monotone-Parent: 963a4636469adb55ac3981048b32011865bb4faa
Monotone-Revision: c13841b87845ca5898c814a499b3bc26de70b096

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-12T23:28:25
Monotone-Branch: i2p.i2p

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: i2p
-Maintainer: i2p
+Maintainer: Hungry Hobo <HungryHobo@i2pmail.org>
 Section: net
 Priority: optional
 Homepage: http://www.i2p2.de/
