Replace libc6 dependency with shlibs:Depends (lintian: package-depends-on-hardcoded-libc)
Monotone-Parent: 9096441994c45bcc17c16d3c4e9e67afb3e9d1b5
Monotone-Revision: 0fabb0281b10ed2d399f4ba965073d75c810858a

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-14T23:55:03
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -243,6 +243,7 @@
         <delete dir="debian/db" />
         <delete file="debian/files" />
         <delete file="debian/build" />
+        <delete file="debian/substvars"/>
         <delete>
             <fileset dir=".." includes="i2p_*.tar.gz,i2p_*.deb,i2p_*.dsc,i2p_*.changes" />
         </delete>
