Add binary-arch and binary-indep targets (lintian: debian-rules-missing-required-target)
Monotone-Parent: 0fabb0281b10ed2d399f4ba965073d75c810858a
Monotone-Revision: 70eb55facaccf41e105d10ddf21a13cc42543232

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-14T23:57:36
Monotone-Branch: i2p.i2p

--- a/debian/rules
+++ b/debian/rules
@@ -113,6 +113,10 @@ binary: build
 	cp -a debian/scripts/postinst debian/scripts/postrm debian/scripts/prerm debian/conffiles debian/tmp/DEBIAN
 	dpkg-deb -b debian/tmp ..
 
+binary-arch:
+
+binary-indep:
+
 clean:
 	rm -f debian/build
 	rm -rf debian/tmp/
