tweaks after review
Monotone-Parent: 9096441994c45bcc17c16d3c4e9e67afb3e9d1b5
Monotone-Revision: ebf0bed8bb7454ba58599c63ebf1bc0387529506

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-14T23:58:13
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -243,9 +243,12 @@
         <delete dir="debian/db" />
         <delete file="debian/files" />
         <delete file="debian/build" />
+      <!-- HH to rework
+           Don't think we should be deleting stuff in .., esp. with wildcards
         <delete>
             <fileset dir=".." includes="i2p_*.tar.gz,i2p_*.deb,i2p_*.dsc,i2p_*.changes" />
         </delete>
+       -->
         <ant dir="core/java/" target="distclean" />
         <ant dir="router/java/" target="distclean" />
         <ant dir="apps/ministreaming/java/" target="distclean" />
