strip binaries in debian package (lintian: unstripped-binary-or-object)
Monotone-Parent: 70eb55facaccf41e105d10ddf21a13cc42543232
Monotone-Revision: 5451ac30e8da619c3a96001d8a7ba531f33c2f53

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-15T00:07:40
Monotone-Branch: i2p.i2p

--- a/debian/rules
+++ b/debian/rules
@@ -70,6 +70,8 @@ endif
 	cp ${wrapperpath}/wrapper.jar debian/tmp/usr/lib/i2p/
 	cp ${wrapperpath}/i2psvc debian/tmp/usr/lib/i2p/
 	chmod +x debian/tmp/usr/lib/i2p/i2psvc
+	strip debian/tmp/usr/lib/i2p/libwrapper.so
+	strip debian/tmp/usr/lib/i2p/i2psvc
 
 	@# copy remaining executables to /usr/bin, replace INSTALL_PATH and SYSTEM_java_io_tmpdir
 	sed 's|%INSTALL_PATH|/usr/share/i2p|g' pkg-temp/eepget > debian/tmp/usr/bin/eepget
