Fix lintian error: no-standards-version-field
Monotone-Parent: a468003a882cf7ef273cd9c23d284b2f3fad6557
Monotone-Revision: 2eb6f45d531fc66bce57696bd27ae4d2ea9cd2a0

Monotone-Author: HungryHobo@mail.i2p
Monotone-Date: 2010-11-15T00:18:31
Monotone-Branch: i2p.i2p

--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,7 @@
 Source: i2p
 Maintainer: Hungry Hobo <HungryHobo@i2pmail.org>
 Section: net
+Standards-Version: 3.8.4
 Priority: optional
 Homepage: http://www.i2p2.de/
 Build-Depends: libc6-dev (>= 2.10), sun-java6-jdk | openjdk-6-jdk | default-jdk | java-sdk, ant, fakeroot, gettext
