comment out distclean deb files again
Monotone-Parent: a3a944f4ebc64bb664602c4d0257bce67f85976e
Monotone-Revision: 3b3b15889a8747bbc02ffcc9a17a1ad0ee4dea09

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-17T16:13:59
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -244,9 +244,11 @@
         <delete file="debian/files" />
         <delete file="debian/build" />
         <delete file="debian/substvars"/>
+      <!-- HH to move
         <delete>
             <fileset dir=".." includes="i2p_*.tar.gz,i2p_*.deb,i2p_*.dsc,i2p_*.changes" />
         </delete>
+      -->
         <ant dir="core/java/" target="distclean" />
         <ant dir="router/java/" target="distclean" />
         <ant dir="apps/ministreaming/java/" target="distclean" />
