--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -34,7 +34,7 @@ clientApp.3.startOnLoad=true
 # load a browser pointing at the web console whenever we start up
 clientApp.4.main=net.i2p.apps.systray.UrlLauncher
 clientApp.4.name=Open Router Console in web browser at startup
-clientApp.4.args=http://127.0.0.1:7657/index.jsp
+clientApp.4.args=http://127.0.0.1:7657/
 clientApp.4.delay=3
 clientApp.4.startOnLoad=true
 
