i2ptunnel jsp cleanup
Monotone-Parent: cca28c4f8a82a04f5e1e41b518338f221bc13f91
Monotone-Revision: beb534fe804c1e970ed2d7eff11f43d04b4de667

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-19T16:14:14
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/jsp/web.xml
+++ b/apps/i2ptunnel/jsp/web.xml
@@ -5,6 +5,19 @@
 
 <web-app>
     <!-- precompiled servlets -->
+
+    <!-- yeah we could do this in a handler but this is easier -->
+    <servlet-mapping>
+        <servlet-name>net.i2p.i2ptunnel.jsp.index_jsp</servlet-name>
+        <!-- this becomes the default so it also covers /index and /index.html -->
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>net.i2p.i2ptunnel.jsp.edit_jsp</servlet-name>
+        <url-pattern>/edit</url-pattern>
+    </servlet-mapping>
+
     <session-config>
         <session-timeout>
             30
