* News:       - Store news last-fetched time so we don't always fetch news after restart       - Don't include news in the updater
Monotone-Parent: 851dfe15b7e22d6d16628d29407e7d4c6f18b466
Monotone-Revision: e5dcfc3c7db0eabddc9f55acf86d9377d05a1760

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-19T18:34:00
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -582,8 +582,10 @@
         <exec executable="echo" osfamily="unix" failifexecutionfails="true" output="pkg-temp/history.txt" append="true">
             <arg value="EARLIER HISTORY IS AVAILABLE IN THE SOURCE PACKAGE" />
         </exec>
-        <!-- may be pointless now, people with split directories will never see this -->
+      <!-- May be pointless now, people with split directories will never see this,
+           and for flat installs we don't want to overwrite news more recent than the update package.
         <copy file="installer/resources/news.xml" todir="pkg-temp/docs/" />
+       -->
     </target>
     <target name="prepupdateSmall" depends="buildSmall, prepupdateRouter, prepthemeupdates">
         <copy file="build/i2ptunnel.jar" todir="pkg-temp/lib/" />
