fix ant distclean javadoc
Monotone-Parent: ec4ef6979db26db48527877d5dc952c69dc65732
Monotone-Revision: b93c1c7b2b01fc43af5bc07470d9997f3edba6da

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-19T22:30:41
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -157,6 +157,7 @@
         <ant dir="apps/susidns/src/" target="poupdate" />
     </target>
     <target name="javadoc">
+        <ant dir="apps/jetty" target="ensureJettylib" />
         <mkdir dir="./build" />
         <mkdir dir="./build/javadoc" />
         <!-- get release and build version numbers -->
